--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -525,7 +525,7 @@ a {
   padding: 0 6%;
   margin: 0 10%;
 }
-#fullpage .section.fifth h2 {
+#fullpage .section.fifth .box h2 {
   text-align: center;
   padding: 30px 0;
   font-weight: 300;
@@ -533,29 +533,29 @@ a {
   color: #000;
   font-family: "GmarketSans";
 }
-#fullpage .section.fifth .arrow.prev {
+#fullpage .section.fifth .box .arrow.prev {
   left: -95px;
 }
-#fullpage .section.fifth .arrow.next {
+#fullpage .section.fifth .box .arrow.next {
   right: -95px;
 }
-#fullpage .section.fifth .slick-list {
+#fullpage .section.fifth .box .slick-list {
   padding-top: 7px;
 }
-#fullpage .section.fifth .product {
+#fullpage .section.fifth .box .product {
   padding-right: 15px;
   transition: transform 0.25s ease;
 }
-#fullpage .section.fifth .product .wrap {
+#fullpage .section.fifth .box .product .wrap {
   border: 1px solid #e7e7e7;
 }
-#fullpage .section.fifth .product .wrap img {
+#fullpage .section.fifth .box .product .wrap img {
   border-radius: 0;
 }
-#fullpage .section.fifth .product .wrap .info {
+#fullpage .section.fifth .box .product .wrap .info {
   padding: 24px 30px 25px;
 }
-#fullpage .section.fifth .product .wrap .info .title {
+#fullpage .section.fifth .box .product .wrap .info .title {
   display: inline-block;
   width: 100%;
   font-weight: 400;
@@ -566,7 +566,7 @@ a {
   white-space: nowrap;
   word-wrap: normal;
 }
-#fullpage .section.fifth .product .wrap .info .contents {
+#fullpage .section.fifth .box .product .wrap .info .contents {
   display: -webkit-box;
   font-size: 15px;
   font-weight: 400;
@@ -581,19 +581,19 @@ a {
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
 }
-#fullpage .section.fifth .product .wrap .info .starts {
+#fullpage .section.fifth .box .product .wrap .info .starts {
   display: inline-block;
   padding-top: 15px;
 }
-#fullpage .section.fifth .product:hover {
+#fullpage .section.fifth .box .product:hover {
   transform: translate(0, -7px);
 }
-#fullpage .section.fifth .custom-slick-dots {
+#fullpage .section.fifth .box .custom-slick-dots {
   display: flex !important;
   justify-content: center;
   margin-top: 35px;
 }
-#fullpage .section.fifth .custom-slick-dots li {
+#fullpage .section.fifth .box .custom-slick-dots li {
   width: 12px;
   height: 12px;
   border-radius: 30px;
@@ -604,15 +604,15 @@ a {
   cursor: pointer;
   box-sizing: border-box;
 }
-#fullpage .section.fifth .custom-slick-dots li.slick-active {
+#fullpage .section.fifth .box .custom-slick-dots li.slick-active {
   width: 28px;
   border-color: #222;
 }
-#fullpage .section.fifth .viewAll {
+#fullpage .section.fifth .box .viewAll {
   margin-top: 45px;
   text-align: center;
 }
-#fullpage .section.fifth .viewAll span {
+#fullpage .section.fifth .box .viewAll span {
   display: inline-block;
   padding: 17px 20px;
   border-radius: 30px;
@@ -625,8 +625,110 @@ a {
   box-sizing: border-box;
   cursor: pointer;
 }
-#fullpage .section.fifth .viewAll span:hover {
+#fullpage .section.fifth .box .viewAll span:hover {
   background-color: #555;
+}
+#fullpage .section.sixth .box {
+  padding: 0 6%;
+  margin: 0 10%;
+}
+#fullpage .section.sixth .box h2 {
+  text-align: center;
+  padding: 30px 0 28px 0;
+  font-weight: 300;
+  font-size: 31px;
+  color: #000;
+  font-family: "GmarketSans";
+}
+#fullpage .section.sixth .box .arrow.prev {
+  left: -95px;
+}
+#fullpage .section.sixth .box .arrow.next {
+  right: -95px;
+}
+#fullpage .section.sixth .box .slick-list {
+  padding-top: 7px;
+}
+#fullpage .section.sixth .box .product {
+  padding-right: 15px;
+  transition: transform 0.25s ease;
+}
+#fullpage .section.sixth .box .product .wrap {
+  border: 1px solid #e7e7e7;
+  background: #fff;
+}
+#fullpage .section.sixth .box .product .wrap img {
+  border-radius: 0;
+}
+#fullpage .section.sixth .box .product .wrap .info {
+  padding: 30px;
+}
+#fullpage .section.sixth .box .product .wrap .info strong {
+  font-weight: 400;
+  font-size: 20px;
+  color: #000;
+  text-overflow: ellipsis;
+  word-wrap: normal;
+  overflow: hidden;
+  white-space: nowrap;
+}
+#fullpage .section.sixth .box .product .wrap .info p {
+  margin-top: 10px;
+  font-weight: 400;
+  font-size: 16px;
+  text-align: center;
+  color: #222;
+  height: 56px;
+  line-height: 28px;
+  text-overflow: ellipsis;
+  word-wrap: normal;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+#fullpage .section.sixth .box .product:hover {
+  transform: translate(0, -7px);
+}
+#fullpage .section.sixth .box .custom-slick-dots {
+  display: flex !important;
+  justify-content: center;
+  margin-top: 35px;
+}
+#fullpage .section.sixth .box .custom-slick-dots li {
+  width: 12px;
+  height: 12px;
+  border-radius: 30px;
+  margin: 0 3px;
+  border: 3px solid #555;
+  text-indent: -999px;
+  transition: color 0.25s ease, width 0.25s ease;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+#fullpage .section.sixth .box .custom-slick-dots li.slick-active {
+  width: 28px;
+  border-color: #222;
+}
+#fullpage .section.sixth .box .viewAll {
+  margin-top: 45px;
+  text-align: center;
+}
+#fullpage .section.sixth .box .viewAll span {
+  display: inline-block;
+  padding: 17px 20px;
+  border-radius: 30px;
+  border: 1px solid #222;
+  font-size: 14px;
+  color: #222;
+  line-height: 1.5;
+  transition: background 0.25s ease;
+  font-weight: 400;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+#fullpage .section.sixth .box .viewAll span:hover {
+  background-color: #eee;
 }
 #fullpage .section.seventh {
   background: rgb(245, 245, 245);
