--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -637,126 +637,250 @@ a {color: #222; text-decoration: none;}
             .box {
                 padding: 0 6%;
                 margin: 0 10%;
-            }
 
-            h2 {
-                text-align: center;
-                padding: 30px 0;
-                font-weight: 300;
-                font-size: 31px;
-                color: #000;
-                font-family: "GmarketSans";
-            }
-
-            .arrow {
-                &.prev {
-                    left: -95px;
+                h2 {
+                    text-align: center;
+                    padding: 30px 0;
+                    font-weight: 300;
+                    font-size: 31px;
+                    color: #000;
+                    font-family: "GmarketSans";
                 }
-                &.next {
-                    right: -95px;
-                }
-            }
-
-            .slick-list {
-                padding-top: 7px;
-            }
-            
-            .product {
-                padding-right: 15px;
-                transition: transform 0.25s ease;
-
-                .wrap {
-                    border: 1px solid #e7e7e7;
-
-                    img {
-                        border-radius: 0;
+    
+                .arrow {
+                    &.prev {
+                        left: -95px;
                     }
-
-                    .info {
-                        padding: 24px 30px 25px;
-
-                        .title {
-                            display: inline-block;
-                            width: 100%;
-                            font-weight: 400;
-                            font-size: 18px;
-                            color: #222;
-                            overflow: hidden;
-                            text-overflow: ellipsis;
-                            white-space: nowrap;
-                            word-wrap: normal;
-                        }
-
-                        .contents {
-                            display: -webkit-box;
-                            font-size: 15px;
-                            font-weight: 400;
-                            color: #999;
-                            margin-top: 12px;
-                            height: 50px;
-                            line-height: 25px;
-                            text-overflow: ellipsis;
-                            overflow: hidden;
-                            word-wrap: normal;
-                            box-sizing: border-box;
-                            -webkit-box-orient:vertical;
-                            -webkit-line-clamp: 2;
-                        }
-
-                        .starts {
-                            display: inline-block;
-                            padding-top: 15px;
-                        }
+                    &.next {
+                        right: -95px;
                     }
                 }
-
-                &:hover {
-                    transform: translate(0, -7px);
+    
+                .slick-list {
+                    padding-top: 7px;
                 }
-            }
-
-            .custom-slick-dots {
-                display: flex!important;
-                justify-content: center;
-                margin-top: 35px;
-
-                li {
-                    width: 12px;
-                    height: 12px;
-                    border-radius: 30px;
-                    margin: 0 3px;
-                    border: 3px solid #555;
-                    text-indent: -999px;
-                    transition: color 0.25s ease,width 0.25s ease;
-                    cursor:pointer;
-                    box-sizing: border-box;
-
-                    &.slick-active {
-                        width: 28px;
-                        border-color: #222;
+                
+                .product {
+                    padding-right: 15px;
+                    transition: transform 0.25s ease;
+    
+                    .wrap {
+                        border: 1px solid #e7e7e7;
+    
+                        img {
+                            border-radius: 0;
+                        }
+    
+                        .info {
+                            padding: 24px 30px 25px;
+    
+                            .title {
+                                display: inline-block;
+                                width: 100%;
+                                font-weight: 400;
+                                font-size: 18px;
+                                color: #222;
+                                overflow: hidden;
+                                text-overflow: ellipsis;
+                                white-space: nowrap;
+                                word-wrap: normal;
+                            }
+    
+                            .contents {
+                                display: -webkit-box;
+                                font-size: 15px;
+                                font-weight: 400;
+                                color: #999;
+                                margin-top: 12px;
+                                height: 50px;
+                                line-height: 25px;
+                                text-overflow: ellipsis;
+                                overflow: hidden;
+                                word-wrap: normal;
+                                box-sizing: border-box;
+                                -webkit-box-orient:vertical;
+                                -webkit-line-clamp: 2;
+                            }
+    
+                            .starts {
+                                display: inline-block;
+                                padding-top: 15px;
+                            }
+                        }
+                    }
+    
+                    &:hover {
+                        transform: translate(0, -7px);
+                    }
+                }
+    
+                .custom-slick-dots {
+                    display: flex!important;
+                    justify-content: center;
+                    margin-top: 35px;
+    
+                    li {
+                        width: 12px;
+                        height: 12px;
+                        border-radius: 30px;
+                        margin: 0 3px;
+                        border: 3px solid #555;
+                        text-indent: -999px;
+                        transition: color 0.25s ease,width 0.25s ease;
+                        cursor:pointer;
+                        box-sizing: border-box;
+    
+                        &.slick-active {
+                            width: 28px;
+                            border-color: #222;
+                        }
+                    }
+                }
+    
+                .viewAll {
+                    margin-top: 45px;
+                    text-align:center;
+    
+                    span {
+                        display: inline-block;
+                        padding: 17px 20px;
+                        border-radius: 30px;
+                        font-size: 14px;
+                        color: #fff;
+                        line-height: 1.5;
+                        background-color:#222;
+                        transition: background 0.25s ease;
+                        font-weight: 400;
+                        box-sizing: border-box;
+                        cursor: pointer;
+    
+                        &:hover {
+                            background-color: #555;
+                        }
                     }
                 }
             }
+        }
 
-            .viewAll {
-                margin-top: 45px;
-                text-align:center;
 
-                span {
-                    display: inline-block;
-                    padding: 17px 20px;
-                    border-radius: 30px;
-                    font-size: 14px;
-                    color: #fff;
-                    line-height: 1.5;
-                    background-color:#222;
-                    transition: background 0.25s ease;
-                    font-weight: 400;
-                    box-sizing: border-box;
-                    cursor: pointer;
+        &.sixth {
+            .box {
+                padding: 0 6%;
+                margin: 0 10%;
+
+                h2 {
+                    text-align: center;
+                    padding: 30px 0 28px 0;
+                    font-weight: 300;
+                    font-size: 31px;
+                    color: #000;
+                    font-family: "GmarketSans";
+                }
+
+                .arrow {
+                    &.prev {
+                        left: -95px;
+                    }
+                    &.next {
+                        right: -95px;
+                    }
+                }
+                
+                .slick-list {
+                    padding-top: 7px;
+                }
+
+                .product {
+                    padding-right: 15px;
+                    transition: transform 0.25s ease;
+
+                    .wrap {
+                        border: 1px solid #e7e7e7;
+                        background: #fff;
+
+                        img {
+                            border-radius: 0;
+                        }
+
+                        .info {
+                            padding: 30px;
+
+                            strong {
+                                font-weight: 400;
+                                font-size: 20px;
+                                color: #000;
+                                text-overflow: ellipsis;
+                                word-wrap: normal;
+                                overflow: hidden;
+                                white-space: nowrap;;
+                            }
+
+                            p {
+                                margin-top: 10px;
+                                font-weight: 400;
+                                font-size: 16px;
+                                text-align: center;
+                                color: #222;
+                                height: 56px;
+                                line-height: 28px;
+                                text-overflow: ellipsis;
+                                word-wrap: normal;
+                                overflow: hidden;
+                                display: -webkit-box;
+                                -webkit-line-clamp: 2;
+                                -webkit-box-orient: vertical;
+                            }
+                        }
+                    }
 
                     &:hover {
-                        background-color: #555;
+                        transform: translate(0, -7px);
+                    }
+                }
+
+                .custom-slick-dots {
+                    display: flex!important;
+                    justify-content: center;
+                    margin-top: 35px;
+    
+                    li {
+                        width: 12px;
+                        height: 12px;
+                        border-radius: 30px;
+                        margin: 0 3px;
+                        border: 3px solid #555;
+                        text-indent: -999px;
+                        transition: color 0.25s ease,width 0.25s ease;
+                        cursor:pointer;
+                        box-sizing: border-box;
+    
+                        &.slick-active {
+                            width: 28px;
+                            border-color: #222;
+                        }
+                    }
+                }
+    
+                .viewAll {
+                    margin-top: 45px;
+                    text-align:center;
+    
+                    span {
+                        display: inline-block;
+                        padding: 17px 20px;
+                        border-radius: 30px;
+                        border: 1px solid #222;
+                        font-size: 14px;
+                        color: #222;
+                        line-height: 1.5;
+                        transition: background 0.25s ease;
+                        font-weight: 400;
+                        box-sizing: border-box;
+                        cursor: pointer;
+    
+                        &:hover {
+                            background-color: #eee;
+                        }
                     }
                 }
             }
